@@ -102,6 +102,7 @@ JTRASHED="Trashed"
 JTRUE="True"
 JUNARCHIVE="Remove from archive status"
 JUNDEFINED="Undefined"
+JUNPROTECTED="Unprotected"
 JUNPUBLISHED="Unpublished"
 JVERSION="Version"
 JYES="Yes"
