@@ -28,6 +28,8 @@ $ -> Language fix or change
 30-Apr-2013 Jean-Marie Simonet
  # [#30488] Wrong default values for weblink icons in layout. Thanks THomas Hunziker.
  #$ [#30381] Create Folder button label - Media Manager. Thanks Glenn Arkell
+ #$ [#30618] *Adding filtering by Unprotected extensions in Extensions Manager=>Manage
+
 
 29-Apr-2013 Jean-Marie Simonet
  $ Removing deprecated lang strings for the flash Uploader
